// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`roster row extras golden g: has it open / last seen / nothing: g roster row extras 1`] = `
[
  <View
    style={
      {
        "gap": 2,
        "marginTop": 2,
      }
    }
    testID="whoson-row-open"
  >
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#2B3038",
          "fontSize": 13,
          "fontWeight": "400",
          "lineHeight": 18,
        }
      }
    >
      Dana Ruiz · Ruiz Electric 1
    </Text>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "rgba(43,48,56,0.78)",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Joined from your invite · Sep 1, 2026
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <View
        accessible={false}
        style={
          [
            {
              "backgroundColor": "#0F7A69",
              "borderRadius": 999,
              "borderWidth": 2,
              "height": 13,
              "width": 13,
            },
            {
              "borderColor": "#FFFFFF",
            },
          ]
        }
        testID="whoson-row-dot-open"
      />
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#026354",
            "fontSize": 12,
            "fontWeight": "600",
            "lineHeight": 16,
          }
        }
      >
        Has it open now
      </Text>
    </View>
  </View>,
  <View
    style={
      {
        "gap": 2,
        "marginTop": 2,
      }
    }
    testID="whoson-row-seen"
  >
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#2B3038",
          "fontSize": 13,
          "fontWeight": "400",
          "lineHeight": 18,
        }
      }
    >
      Dana Ruiz · Ruiz Electric 1
    </Text>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "rgba(43,48,56,0.78)",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Joined Sep 1, 2026
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          {
            "color": "rgba(43,48,56,0.78)",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 16,
          }
        }
      >
        Last seen online here 12 min ago
      </Text>
    </View>
  </View>,
  <View
    style={
      {
        "gap": 2,
        "marginTop": 2,
      }
    }
    testID="whoson-row-quiet"
  >
    <Text
      numberOfLines={1}
      style={
        {
          "color": "rgba(43,48,56,0.78)",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Joined from your invite · Sep 1, 2026
    </Text>
  </View>,
]
`;

exports[`the Team block golden e: the owner sees the switch and three footnotes: e the Team block, owner viewing 1`] = `
<View
  style={
    {
      "gap": 12,
      "marginBottom": 12,
    }
  }
  testID="whoson-people"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 12,
      }
    }
    testID="whoson-share-row"
  >
    <View
      style={
        {
          "flex": 1,
          "gap": 2,
          "minWidth": 0,
        }
      }
    >
      <Text
        style={
          {
            "color": "#2B3038",
            "fontSize": 15,
            "fontWeight": "600",
            "lineHeight": 20,
          }
        }
      >
        Show when I have a project open
      </Text>
      <Text
        style={
          {
            "color": "rgba(43,48,56,0.78)",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 16,
          }
        }
      >
        The project owner sees when you have their project open and when you were last seen online there. Your team members see when you have your project open. Turn it off and they stop seeing both, and your last seen times are deleted.
      </Text>
    </View>
    <RCTSwitch
      accessibilityLabel="Show when I have a project open"
      accessibilityRole="switch"
      disabled={false}
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#2F6B3A"
      style={
        [
          {
            "alignSelf": "flex-start",
          },
          {
            "backgroundColor": "#D7DAD4",
            "borderRadius": 16,
          },
        ]
      }
      testID="whoson-share-switch"
      thumbTintColor="#FFFFFF"
      tintColor="#D7DAD4"
      value={true}
    />
  </View>
  <View
    style={
      {
        "gap": 4,
      }
    }
  >
    <Text
      style={
        {
          "color": "rgba(43,48,56,0.72)",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      "Has it open" means the project is on that person's screen right now. It doesn't show what they are doing.
    </Text>
    <Text
      style={
        {
          "color": "rgba(43,48,56,0.72)",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Work done without a signal, or on an older app version, doesn't show here. A team member can also choose not to show it.
    </Text>
    <Text
      style={
        {
          "color": "rgba(43,48,56,0.72)",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Clients and subs who use a link instead of an account aren't listed here. Names and companies are what each person typed on their own profile; the email is the one you invited.
    </Text>
  </View>
</View>
`;

exports[`the Team block golden f: a team member sees the owner line with the dot, the switch, and the first footnote only: f the Team block, team member viewing 1`] = `
<View
  style={
    {
      "gap": 12,
      "marginBottom": 12,
    }
  }
  testID="whoson-people"
>
  <View
    style={
      {
        "gap": 2,
      }
    }
    testID="whoson-people-owner"
  >
    <Text
      numberOfLines={2}
      style={
        {
          "color": "#2B3038",
          "fontSize": 15,
          "fontWeight": "400",
          "lineHeight": 20,
        }
      }
    >
      Project owner: Omar Majeed, Majeed Builders
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <View
        accessible={false}
        style={
          [
            {
              "backgroundColor": "#0F7A69",
              "borderRadius": 999,
              "borderWidth": 2,
              "height": 13,
              "width": 13,
            },
            {
              "borderColor": "#FFFFFF",
            },
          ]
        }
        testID="whoson-people-owner-dot"
      />
      <Text
        style={
          {
            "color": "#026354",
            "fontSize": 12,
            "fontWeight": "600",
            "lineHeight": 16,
          }
        }
      >
        Has it open now
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 12,
      }
    }
    testID="whoson-share-row"
  >
    <View
      style={
        {
          "flex": 1,
          "gap": 2,
          "minWidth": 0,
        }
      }
    >
      <Text
        style={
          {
            "color": "#2B3038",
            "fontSize": 15,
            "fontWeight": "600",
            "lineHeight": 20,
          }
        }
      >
        Show when I have a project open
      </Text>
      <Text
        style={
          {
            "color": "rgba(43,48,56,0.78)",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 16,
          }
        }
      >
        The project owner sees when you have their project open and when you were last seen online there. Your team members see when you have your project open. Turn it off and they stop seeing both, and your last seen times are deleted.
      </Text>
    </View>
    <RCTSwitch
      accessibilityLabel="Show when I have a project open"
      accessibilityRole="switch"
      disabled={false}
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#2F6B3A"
      style={
        [
          {
            "alignSelf": "flex-start",
          },
          {
            "backgroundColor": "#D7DAD4",
            "borderRadius": 16,
          },
        ]
      }
      testID="whoson-share-switch"
      thumbTintColor="#FFFFFF"
      tintColor="#D7DAD4"
      value={false}
    />
  </View>
  <View
    style={
      {
        "gap": 4,
      }
    }
  >
    <Text
      style={
        {
          "color": "rgba(43,48,56,0.72)",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      "Has it open" means the project is on that person's screen right now. It doesn't show what they are doing.
    </Text>
  </View>
</View>
`;

exports[`the stack on the phone 3  owner plus one who has it open: the text, a dot on that avatar, none on his own: a owner + three, one open, light 1`] = `
<View
  accessibilityLabel="Team on this project: 4. 1 has it open now."
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 8,
      "top": 8,
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
      "marginTop": 8,
      "minHeight": 32,
    }
  }
  testID="whoson-stack"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "flexShrink": 0,
      }
    }
  >
    <View
      accessible={false}
      importantForAccessibility="no-hide-descendants"
      style={
        [
          {
            "flexShrink": 0,
          },
          {
            "height": 32,
            "marginLeft": 0,
            "width": 32,
          },
          {
            "zIndex": 4,
          },
        ]
      }
      testID="whoson-avatar-owner-0000"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 999,
              "borderWidth": 2,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            {
              "borderColor": "#FFFFFF",
            },
            {
              "backgroundColor": "#A31813",
              "height": 32,
              "width": 32,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          numberOfLines={1}
          style={
            [
              {
                "fontSize": 11,
                "fontWeight": "700",
                "letterSpacing": 0.2,
                "lineHeight": 13,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        >
          OM
        </Text>
      </View>
    </View>
    <View
      accessible={false}
      importantForAccessibility="no-hide-descendants"
      style={
        [
          {
            "flexShrink": 0,
          },
          {
            "height": 32,
            "marginLeft": -12,
            "width": 32,
          },
          {
            "zIndex": 3,
          },
        ]
      }
      testID="whoson-avatar-member-0002"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 999,
              "borderWidth": 2,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            {
              "borderColor": "#FFFFFF",
            },
            {
              "backgroundColor": "#B4530A",
              "height": 32,
              "width": 32,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          numberOfLines={1}
          style={
            [
              {
                "fontSize": 11,
                "fontWeight": "700",
                "letterSpacing": 0.2,
                "lineHeight": 13,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        >
          DR
        </Text>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#0F7A69",
              "borderRadius": 999,
              "borderWidth": 2,
              "height": 13,
              "width": 13,
            },
            {
              "bottom": -1,
              "position": "absolute",
              "right": -1,
            },
            {
              "borderColor": "#FFFFFF",
            },
          ]
        }
        testID="whoson-dot-member-0002"
      />
    </View>
    <View
      accessible={false}
      importantForAccessibility="no-hide-descendants"
      style={
        [
          {
            "flexShrink": 0,
          },
          {
            "height": 32,
            "marginLeft": -12,
            "width": 32,
          },
          {
            "zIndex": 2,
          },
        ]
      }
      testID="whoson-avatar-member-0001"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 999,
              "borderWidth": 2,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            {
              "borderColor": "#FFFFFF",
            },
            {
              "backgroundColor": "#15703E",
              "height": 32,
              "width": 32,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          numberOfLines={1}
          style={
            [
              {
                "fontSize": 11,
                "fontWeight": "700",
                "letterSpacing": 0.2,
                "lineHeight": 13,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        >
          DR
        </Text>
      </View>
    </View>
    <View
      accessible={false}
      importantForAccessibility="no-hide-descendants"
      style={
        [
          {
            "flexShrink": 0,
          },
          {
            "height": 32,
            "marginLeft": -12,
            "width": 32,
          },
          {
            "zIndex": 1,
          },
        ]
      }
      testID="whoson-avatar-member-0003"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 999,
              "borderWidth": 2,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            {
              "borderColor": "#FFFFFF",
            },
            {
              "backgroundColor": "#A31813",
              "height": 32,
              "width": 32,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          numberOfLines={1}
          style={
            [
              {
                "fontSize": 11,
                "fontWeight": "700",
                "letterSpacing": 0.2,
                "lineHeight": 13,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        >
          DR
        </Text>
      </View>
    </View>
  </View>
  <Text
    numberOfLines={1}
    style={
      {
        "color": "rgba(43,48,56,0.78)",
        "flexShrink": 1,
        "fontSize": 13,
        "fontWeight": "400",
        "lineHeight": 18,
      }
    }
  >
    1 has it open
  </Text>
  <View
    style={
      {
        "flex": 1,
      }
    }
  />
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={14}
    bbWidth={14}
    fill="none"
    focusable={false}
    height={14}
    meetOrSlice={0}
    minX={0}
    minY={0}
    stroke="rgba(43,48,56,0.72)"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 14,
          "width": 14,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
    width={14}
    xmlns="http://www.w3.org/2000/svg"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "payload": 3089838136,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
      strokeWidth={2}
    >
      <RNSVGPath
        d="m9 18 6-6-6-6"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 3089838136,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`the stack on the phone 4  seven team members, a hidden one has it open: four avatars and a +4 carrying the dot: c seven team members, a hidden one open 1`] = `
<View
  accessibilityLabel="Team on this project: 8. 5 have it open now."
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 8,
      "top": 8,
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
      "marginTop": 8,
      "minHeight": 32,
    }
  }
  testID="whoson-stack"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "flexShrink": 0,
      }
    }
  >
    <View
      accessible={false}
      importantForAccessibility="no-hide-descendants"
      style={
        [
          {
            "flexShrink": 0,
          },
          {
            "height": 32,
            "marginLeft": 0,
            "width": 32,
          },
          {
            "zIndex": 4,
          },
        ]
      }
      testID="whoson-avatar-owner-0000"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 999,
              "borderWidth": 2,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            {
              "borderColor": "#FFFFFF",
            },
            {
              "backgroundColor": "#A31813",
              "height": 32,
              "width": 32,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          numberOfLines={1}
          style={
            [
              {
                "fontSize": 11,
                "fontWeight": "700",
                "letterSpacing": 0.2,
                "lineHeight": 13,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        >
          OM
        </Text>
      </View>
    </View>
    <View
      accessible={false}
      importantForAccessibility="no-hide-descendants"
      style={
        [
          {
            "flexShrink": 0,
          },
          {
            "height": 32,
            "marginLeft": -12,
            "width": 32,
          },
          {
            "zIndex": 3,
          },
        ]
      }
      testID="whoson-avatar-member-0002"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 999,
              "borderWidth": 2,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            {
              "borderColor": "#FFFFFF",
            },
            {
              "backgroundColor": "#B4530A",
              "height": 32,
              "width": 32,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          numberOfLines={1}
          style={
            [
              {
                "fontSize": 11,
                "fontWeight": "700",
                "letterSpacing": 0.2,
                "lineHeight": 13,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        >
          DR
        </Text>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#0F7A69",
              "borderRadius": 999,
              "borderWidth": 2,
              "height": 13,
              "width": 13,
            },
            {
              "bottom": -1,
              "position": "absolute",
              "right": -1,
            },
            {
              "borderColor": "#FFFFFF",
            },
          ]
        }
        testID="whoson-dot-member-0002"
      />
    </View>
    <View
      accessible={false}
      importantForAccessibility="no-hide-descendants"
      style={
        [
          {
            "flexShrink": 0,
          },
          {
            "height": 32,
            "marginLeft": -12,
            "width": 32,
          },
          {
            "zIndex": 2,
          },
        ]
      }
      testID="whoson-avatar-member-0003"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 999,
              "borderWidth": 2,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            {
              "borderColor": "#FFFFFF",
            },
            {
              "backgroundColor": "#A31813",
              "height": 32,
              "width": 32,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          numberOfLines={1}
          style={
            [
              {
                "fontSize": 11,
                "fontWeight": "700",
                "letterSpacing": 0.2,
                "lineHeight": 13,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        >
          DR
        </Text>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#0F7A69",
              "borderRadius": 999,
              "borderWidth": 2,
              "height": 13,
              "width": 13,
            },
            {
              "bottom": -1,
              "position": "absolute",
              "right": -1,
            },
            {
              "borderColor": "#FFFFFF",
            },
          ]
        }
        testID="whoson-dot-member-0003"
      />
    </View>
    <View
      accessible={false}
      importantForAccessibility="no-hide-descendants"
      style={
        [
          {
            "flexShrink": 0,
          },
          {
            "height": 32,
            "marginLeft": -12,
            "width": 32,
          },
          {
            "zIndex": 1,
          },
        ]
      }
      testID="whoson-avatar-member-0004"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 999,
              "borderWidth": 2,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            {
              "borderColor": "#FFFFFF",
            },
            {
              "backgroundColor": "#15703E",
              "height": 32,
              "width": 32,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          numberOfLines={1}
          style={
            [
              {
                "fontSize": 11,
                "fontWeight": "700",
                "letterSpacing": 0.2,
                "lineHeight": 13,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        >
          DR
        </Text>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#0F7A69",
              "borderRadius": 999,
              "borderWidth": 2,
              "height": 13,
              "width": 13,
            },
            {
              "bottom": -1,
              "position": "absolute",
              "right": -1,
            },
            {
              "borderColor": "#FFFFFF",
            },
          ]
        }
        testID="whoson-dot-member-0004"
      />
    </View>
    <View
      accessible={false}
      importantForAccessibility="no-hide-descendants"
      style={
        [
          {
            "flexShrink": 0,
          },
          {
            "height": 32,
            "marginLeft": -12,
            "minWidth": 32,
          },
        ]
      }
      testID="whoson-overflow"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 999,
              "borderWidth": 2,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#E2E4DF",
              "paddingHorizontal": 4,
            },
            {
              "borderColor": "#FFFFFF",
            },
            {
              "height": 32,
              "minWidth": 32,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          numberOfLines={1}
          style={
            {
              "color": "rgba(43,48,56,0.78)",
              "fontSize": 11,
              "fontWeight": "700",
              "lineHeight": 13,
            }
          }
        >
          +4
        </Text>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#0F7A69",
              "borderRadius": 999,
              "borderWidth": 2,
              "height": 13,
              "width": 13,
            },
            {
              "bottom": -1,
              "position": "absolute",
              "right": -1,
            },
            {
              "borderColor": "#FFFFFF",
            },
          ]
        }
        testID="whoson-dot-overflow"
      />
    </View>
  </View>
  <Text
    numberOfLines={1}
    style={
      {
        "color": "rgba(43,48,56,0.78)",
        "flexShrink": 1,
        "fontSize": 13,
        "fontWeight": "400",
        "lineHeight": 18,
      }
    }
  >
    5 have it open
  </Text>
  <View
    style={
      {
        "flex": 1,
      }
    }
  />
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={14}
    bbWidth={14}
    fill="none"
    focusable={false}
    height={14}
    meetOrSlice={0}
    minX={0}
    minY={0}
    stroke="rgba(43,48,56,0.72)"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 14,
          "width": 14,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
    width={14}
    xmlns="http://www.w3.org/2000/svg"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "payload": 3089838136,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
      strokeWidth={2}
    >
      <RNSVGPath
        d="m9 18 6-6-6-6"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 3089838136,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`the stack on the phone 6  a Field viewer: the owner and himself, no chip, no count, no @ anywhere: d a Field viewer, the owner has it open, the question 1`] = `
[
  <View
    accessibilityLabel="Team on this project. The project owner has it open."
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "top": 8,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "marginTop": 8,
        "minHeight": 32,
      }
    }
    testID="whoson-stack"
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexShrink": 0,
        }
      }
    >
      <View
        accessible={false}
        importantForAccessibility="no-hide-descendants"
        style={
          [
            {
              "flexShrink": 0,
            },
            {
              "height": 32,
              "marginLeft": 0,
              "width": 32,
            },
            {
              "zIndex": 2,
            },
          ]
        }
        testID="whoson-avatar-owner-0000"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 999,
                "borderWidth": 2,
                "justifyContent": "center",
                "overflow": "hidden",
              },
              {
                "borderColor": "#FFFFFF",
              },
              {
                "backgroundColor": "#A31813",
                "height": 32,
                "width": 32,
              },
            ]
          }
        >
          <Text
            allowFontScaling={false}
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 11,
                  "fontWeight": "700",
                  "letterSpacing": 0.2,
                  "lineHeight": 13,
                },
                {
                  "color": "#FFFFFF",
                },
              ]
            }
          >
            OM
          </Text>
        </View>
        <View
          style={
            [
              {
                "backgroundColor": "#0F7A69",
                "borderRadius": 999,
                "borderWidth": 2,
                "height": 13,
                "width": 13,
              },
              {
                "bottom": -1,
                "position": "absolute",
                "right": -1,
              },
              {
                "borderColor": "#FFFFFF",
              },
            ]
          }
          testID="whoson-dot-owner-0000"
        />
      </View>
      <View
        accessible={false}
        importantForAccessibility="no-hide-descendants"
        style={
          [
            {
              "flexShrink": 0,
            },
            {
              "height": 32,
              "marginLeft": -12,
              "width": 32,
            },
            {
              "zIndex": 1,
            },
          ]
        }
        testID="whoson-avatar-member-0002"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 999,
                "borderWidth": 2,
                "justifyContent": "center",
                "overflow": "hidden",
              },
              {
                "borderColor": "#FFFFFF",
              },
              {
                "backgroundColor": "#B4530A",
                "height": 32,
                "width": 32,
              },
            ]
          }
        >
          <Text
            allowFontScaling={false}
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 11,
                  "fontWeight": "700",
                  "letterSpacing": 0.2,
                  "lineHeight": 13,
                },
                {
                  "color": "#FFFFFF",
                },
              ]
            }
          >
            DR
          </Text>
        </View>
      </View>
    </View>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "rgba(43,48,56,0.78)",
          "flexShrink": 1,
          "fontSize": 13,
          "fontWeight": "400",
          "lineHeight": 18,
        }
      }
    >
      The project owner has it open
    </Text>
    <View
      style={
        {
          "flex": 1,
        }
      }
    />
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={14}
      bbWidth={14}
      fill="none"
      focusable={false}
      height={14}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="rgba(43,48,56,0.72)"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 14,
            "width": 14,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 3089838136,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="m9 18 6-6-6-6"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 3089838136,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>,
  <View
    style={
      {
        "marginTop": 12,
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#D7DAD4",
            "borderCurve": "continuous",
          },
          {
            "borderRadius": 12,
            "borderWidth": 1,
            "padding": 12,
          },
          {
            "gap": 8,
          },
        ]
      }
      testID="whoson-choice"
    >
      <Text
        accessibilityRole="header"
        style={
          {
            "color": "#2B3038",
            "fontSize": 15,
            "fontWeight": "600",
            "lineHeight": 20,
          }
        }
      >
        Show when you have a project open?
      </Text>
      <Text
        style={
          {
            "color": "rgba(43,48,56,0.78)",
            "fontSize": 13,
            "fontWeight": "400",
            "lineHeight": 18,
          }
        }
      >
        On a project someone shared with you, the project owner sees when you have it open and when you were last seen online there. On a project you own, your team members see when you have it open. Nothing is shown until you choose, and you can change it in Settings.
      </Text>
      <View
        style={
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 8,
            "marginTop": 4,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderCurve": "continuous",
                  "borderRadius": 999,
                  "justifyContent": "center",
                },
                {
                  "backgroundColor": "#2F6B3A",
                  "elevation": 4,
                  "shadowColor": "#2F6B3A",
                  "shadowOffset": {
                    "height": 6,
                    "width": 0,
                  },
                  "shadowOpacity": 0.25,
                  "shadowRadius": 16,
                },
                {
                  "height": 36,
                  "paddingHorizontal": 16,
                },
                false,
                false,
                undefined,
              ]
            }
            testID="whoson-choice-yes"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontWeight": "600",
                      "letterSpacing": -0.15,
                    },
                    {
                      "color": "#FFFFFF",
                      "fontSize": 13,
                    },
                  ]
                }
              >
                Show it
              </Text>
            </View>
          </View>
        </View>
        <View
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "borderCurve": "continuous",
                  "borderRadius": 999,
                  "justifyContent": "center",
                },
                {
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#D7DAD4",
                  "borderWidth": 1,
                },
                {
                  "height": 36,
                  "paddingHorizontal": 16,
                },
                false,
                false,
                undefined,
              ]
            }
            testID="whoson-choice-no"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontWeight": "600",
                      "letterSpacing": -0.15,
                    },
                    {
                      "color": "#2B3038",
                      "fontSize": 13,
                    },
                  ]
                }
              >
                Don't show it
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`the stack on the phone golden b: the same stack in the dark theme: b owner + three, one open, dark 1`] = `
<View
  accessibilityLabel="Team on this project: 4. 1 has it open now."
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 8,
      "top": 8,
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
      "marginTop": 8,
      "minHeight": 32,
    }
  }
  testID="whoson-stack"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "flexShrink": 0,
      }
    }
  >
    <View
      accessible={false}
      importantForAccessibility="no-hide-descendants"
      style={
        [
          {
            "flexShrink": 0,
          },
          {
            "height": 32,
            "marginLeft": 0,
            "width": 32,
          },
          {
            "zIndex": 4,
          },
        ]
      }
      testID="whoson-avatar-owner-0000"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 999,
              "borderWidth": 2,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            {
              "borderColor": "#1D211F",
            },
            {
              "backgroundColor": "#A31813",
              "height": 32,
              "width": 32,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          numberOfLines={1}
          style={
            [
              {
                "fontSize": 11,
                "fontWeight": "700",
                "letterSpacing": 0.2,
                "lineHeight": 13,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        >
          OM
        </Text>
      </View>
    </View>
    <View
      accessible={false}
      importantForAccessibility="no-hide-descendants"
      style={
        [
          {
            "flexShrink": 0,
          },
          {
            "height": 32,
            "marginLeft": -12,
            "width": 32,
          },
          {
            "zIndex": 3,
          },
        ]
      }
      testID="whoson-avatar-member-0002"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 999,
              "borderWidth": 2,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            {
              "borderColor": "#1D211F",
            },
            {
              "backgroundColor": "#B4530A",
              "height": 32,
              "width": 32,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          numberOfLines={1}
          style={
            [
              {
                "fontSize": 11,
                "fontWeight": "700",
                "letterSpacing": 0.2,
                "lineHeight": 13,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        >
          DR
        </Text>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "#1ABCA2",
              "borderRadius": 999,
              "borderWidth": 2,
              "height": 13,
              "width": 13,
            },
            {
              "bottom": -1,
              "position": "absolute",
              "right": -1,
            },
            {
              "borderColor": "#1D211F",
            },
          ]
        }
        testID="whoson-dot-member-0002"
      />
    </View>
    <View
      accessible={false}
      importantForAccessibility="no-hide-descendants"
      style={
        [
          {
            "flexShrink": 0,
          },
          {
            "height": 32,
            "marginLeft": -12,
            "width": 32,
          },
          {
            "zIndex": 2,
          },
        ]
      }
      testID="whoson-avatar-member-0001"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 999,
              "borderWidth": 2,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            {
              "borderColor": "#1D211F",
            },
            {
              "backgroundColor": "#15703E",
              "height": 32,
              "width": 32,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          numberOfLines={1}
          style={
            [
              {
                "fontSize": 11,
                "fontWeight": "700",
                "letterSpacing": 0.2,
                "lineHeight": 13,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        >
          DR
        </Text>
      </View>
    </View>
    <View
      accessible={false}
      importantForAccessibility="no-hide-descendants"
      style={
        [
          {
            "flexShrink": 0,
          },
          {
            "height": 32,
            "marginLeft": -12,
            "width": 32,
          },
          {
            "zIndex": 1,
          },
        ]
      }
      testID="whoson-avatar-member-0003"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 999,
              "borderWidth": 2,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            {
              "borderColor": "#1D211F",
            },
            {
              "backgroundColor": "#A31813",
              "height": 32,
              "width": 32,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          numberOfLines={1}
          style={
            [
              {
                "fontSize": 11,
                "fontWeight": "700",
                "letterSpacing": 0.2,
                "lineHeight": 13,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        >
          DR
        </Text>
      </View>
    </View>
  </View>
  <Text
    numberOfLines={1}
    style={
      {
        "color": "#9AA3AD",
        "flexShrink": 1,
        "fontSize": 13,
        "fontWeight": "400",
        "lineHeight": 18,
      }
    }
  >
    1 has it open
  </Text>
  <View
    style={
      {
        "flex": 1,
      }
    }
  />
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={14}
    bbWidth={14}
    fill="none"
    focusable={false}
    height={14}
    meetOrSlice={0}
    minX={0}
    minY={0}
    stroke="rgba(154,163,173,0.88)"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 14,
          "width": 14,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
    width={14}
    xmlns="http://www.w3.org/2000/svg"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "payload": 3768230829,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
      strokeWidth={2}
    >
      <RNSVGPath
        d="m9 18 6-6-6-6"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 3768230829,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
